# diamonds_front

./: .python-version  README.md  pyproject.toml  requirements.txt
api/front/: app.py
