[project]
name = "diamond-front"
version = "0.1.0"
description = "create simple front with streamlit and connected to API"
authors = [
    {name = "yufo fukuda",email = "fujimotohugo@gmail.com"}
]
license = {text = "n"}
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.55.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
